# flutter_tflite

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_tflite/: FlutterTflitePlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_tflite_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_tflite.podspec
ios/Classes/: FlutterTflitePlugin.mm  SwiftFlutterTflitePlugin.swift
ios/src/: TfliteBase.cpp
lib/: flutter_tflite.dart
